fixed spacing

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ input:focus {
   margin: auto;
 }
 .info .flex {
-  padding: 100px 0;
+  padding: 60px 0;
   width: 85%;
   margin: auto;
 }
@@ -375,6 +375,10 @@ input:focus {
   .header .btn {
     /* width: 100%; */
     padding: 8px 25px;
+  }
+  .btn {
+    /* width: 100%; */
+    padding: 13px 20px;
   }
   .showcase {
     margin-top: 50px;
